Fixed h-scrolling bug on small screen on front page

--- a/src/less/front-page.less
+++ b/src/less/front-page.less
@@ -80,7 +80,7 @@
     height: auto;
     border-radius: 4rem;
     vertical-align: middle;
-    margin: 0 1rem;
+    margin: 0;
   }
   &-circle {
     border-radius: 999em;
